...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="8dp"
            android:orientation="vertical">
            <TextView
                android:text="@string/cocktail_name"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" />
            <EditText
                android:id="@+id/etRecipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_name"
                android:inputType="text"/>
        </LinearLayout>

...
                    android:text="@string/minutes"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>
                <NumberPicker
                    android:id="@+id/timer_picker_minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>
            </LinearLayout>

            <LinearLayout
...
                    android:text="@string/difficulty"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>
                <NumberPicker
                    android:id="@+id/difficulty_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>
        </LinearLayout>
...
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" />
            <EditText
                android:id="@+id/etRecipeDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_description"
                android:inputType="textMultiLine"
                android:maxLines="4"/>
        </LinearLayout>
...
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" />
            <Button
                android:id="@+id/btnManageIngredients"
                android:text="@string/manage_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:backgroundTint="@color/accent_color"
                android:onClick="onClickManageIngredients"/>
...
        android:padding="24dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <Button
            android:id="@+id/btnAddRecipe"
            android:text="@string/add_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:backgroundTint="@color/accent_color"
            android:onClick="onClickAddRecipe"/>
...
