...
            android:layout_width="400dp"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:id="@+id/txt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="96dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:hint="@string/prompt_username"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/txt_password_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:hint="@string/prompt_repeat_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="145dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
...
