...
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/logoutButton"
                    app:layout_constraintStart_toEndOf="@+id/user_profile_back_button"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/logoutButton"
                    android:layout_width="wrap_content"
...
                <TextView
                    android:id="@+id/txtViewLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:textColor="@color/black"
                    android:text="@string/logout_button_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/logoutButton"/>


                <ImageView
                    android:id="@+id/user_profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/user_profile_back_button"
                    app:layout_constraintStart_toStartOf="@id/user_profile_top_layout"/>
...
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/user_profile_image"
                    app:layout_constraintTop_toBottomOf="@+id/txtYourProfile" />

                <TextView
                    android:id="@+id/user_profile_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/sample_name"
...
